--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/style/index.jsx", "src/app/scripts/utils/fetch/fetchUserById.jsx", "src/app/scripts/utils/fetch/fetchUsers.jsx"],
   "exclude": ["node_modules"]
 }
